# NAI

Lab2/: CMakeLists.txt  main.cpp
Nai12/: CMakeLists.txt  main.cpp
NaiDijkstra/: CMakeLists.txt  main.cpp  porownanie.txt
NaiL7/: CMakeLists.txt  main.cpp  porownanie
NaiL7/python/NaiL7/: main.py
lab1/: main.cpp
